# text-decapitalization

./: 11-22-63.txt  README.md  encoders.py  main.py  model.py  pyproject.toml  rules.py  solution.docx
